@@ -44,6 +44,7 @@ production.
 * (bug 30264) Changed installer-generated LocalSettings.php to use require_once()
   instead require() for included extensions.
 * Do not convert text in the user interface language to another script.
+* (bug 26283) Previewing user JS/CSS pages doesn't load other user JS/CSS pages
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
